<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/expressaoMatematica"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textColor="@color/black"
        android:gravity="end"
        android:ellipsize="start"
        android:textSize="40sp"
        android:layout_marginEnd="10dp"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/resultadoExpressao"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:gravity="start"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:maxLines="1"
        android:ellipsize="end" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/limparBotao"
            style="@style/Operators_Button"
            android:text="@string/botaoLimpar" />

        <TextView
            android:id="@+id/operacaoDivisao"
            style="@style/Operators_Button"
            android:text="@string/operacaoDivisao"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/digitoSete"
            style="@style/Numbers_Button"
            android:text="@string/digitoSete" />

        <TextView
            android:id="@+id/digitoOito"
            style="@style/Numbers_Button"
            android:text="@string/digitoOito" />

        <TextView
            android:id="@+id/digitoNove"
            style="@style/Numbers_Button"
            android:text="@string/digitoNove" />

        <TextView
            android:id="@+id/operacaoMultiplicacao"
            style="@style/Operators_Button"
            android:text="@string/operacaoMultiplicacao"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/digitoQuatro"
            style="@style/Numbers_Button"
            android:text="@string/digitoQuatro" />

        <TextView
            android:id="@+id/digitoCinco"
            style="@style/Numbers_Button"
            android:text="@string/digitoCinco" />

        <TextView
            android:id="@+id/digitoSeis"
            style="@style/Numbers_Button"
            android:text="@string/digitoSeis" />

        <TextView
            android:id="@+id/operacaoSubtracao"
            style="@style/Operators_Button"
            android:text="@string/operacaoSubtracao"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/digitoUm"
            style="@style/Numbers_Button"
            android:text="@string/digitoUm" />

        <TextView
            android:id="@+id/digitoDois"
            style="@style/Numbers_Button"
            android:text="@string/digitoDois" />

        <TextView
            android:id="@+id/digitoTres"
            style="@style/Numbers_Button"
            android:text="@string/digitoTres" />

        <TextView
            android:id="@+id/operacaoAdicao"
            style="@style/Operators_Button"
            android:text="@string/operacaoAdicao"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/decimal"
            style="@style/Numbers_Button"
            android:text="@string/digitoDecimal" />

        <TextView
            android:id="@+id/digitoZero"
            style="@style/Numbers_Button"
            android:text="@string/digitoZero" />

        <TextView
            android:id="@+id/botaoRemocao"
            style="@style/Numbers_Button"
            android:text="" />

        <TextView
            android:id="@+id/operacaoAdicao"
            style="@style/Operators_Button"
            android:text="@string/operacaoAdicao"/>



    </LinearLayout>

</LinearLayout>